[package]
name = "wepd"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
remove-async-await = "1.0.1"

[features]
default = ["embedded-graphics"]
embedded-graphics = ["dep:embedded-graphics-core"]
async = ["dep:embedded-hal-async"]
